--- a/TestClass.tt
+++ b/TestClass.tt
@@ -9,7 +9,7 @@ class {{class_name}} extends \PHPUnit_Framework_TestCase {
    */
   public function testInstanceIsCorrect()
   {
-    $result = \{{class_name_to_test}}::Init();
+    $result = new \{{class_name_to_test}}();
     $this->assertInstanceOf('{{class_name_to_test}}', $result);
   }
   
