--- a/TestClass.tt
+++ b/TestClass.tt
@@ -1,16 +1,18 @@
 <?php
 
-use {{class_name_to_test}};
+namespace {{test_class_namespace}};
 
-class {{class_name}} extends \PHPUnit_Framework_TestCase {
+use {{full_class_name_to_test}};
+
+class {{test_class_name}} extends \PHPUnit_Framework_TestCase {
 
   /**
    * This method is generated.
    */
   public function testInstanceIsCorrect()
   {
-    $result = new \{{class_name_to_test}}();
-    $this->assertInstanceOf('{{class_name_to_test}}', $result);
+    $result = new {{class_name_to_test}}();
+    $this->assertInstanceOf('{{full_class_name_to_test}}', $result);
   }
   
   //Write the next tests below...
