--- a/TestClass.tt
+++ b/TestClass.tt
@@ -11,14 +11,12 @@ use {{full_class_name_to_test}};
 
 class {{test_class_name}} extends \PHPUnit_Framework_TestCase {
 
-  protected $app;
 
   /**
    * Initialize the app object.
    */
   protected function setUp()
   {
-      $this->app = new \Puzzlout\Framework\Tests\TestApplication();
   }
   
   /**
@@ -26,8 +24,7 @@ class {{test_class_name}} extends \PHPUnit_Framework_TestCase {
    */
   public function testInstanceIsCorrect()
   {
-    $this->assertNotNull($this->app);
-    $result = new {{class_name_to_test}}($this->app);
+    $result = new {{class_name_to_test}}();
     $this->assertInstanceOf('{{full_class_name_to_test}}', $result);
   }
   
